# confomat-example

./: Cargo.toml  README.md
config/: pkgsrc.toml  users.toml
deploy/: by_ip  common.sh
files/base/root/dotfiles/: bash_profile  bashrc  vimrc
files/users/dotfiles/: bashrc
files/users/ssh_keys/: example
files/www/: nginx.conf  ssl.conf
files/www/instances/example.com/: config
files/www/instances/example.com/includes/: example.conf
files/www/instances/example.com/scripts/: hook.sh
files/www/instances/example.com/sites/: example.conf
files/www/scripts/: dehydrated.sh
src/: common.rs  main.rs  role_base.rs  role_local_homedir.rs  role_pkgsrc.rs  role_users.rs  role_www.rs  role_zfs_data.rs
