[package]
name = "confomat-example"
version = "0.1.0"
authors = ["Joshua M. Clulow <josh@sysmgr.org>"]
edition = "2018"

[[bin]]
name = "confomat"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
anyhow = "1"
slog = "2.5"
jmclib = { git = "https://github.com/jclulow/rust-jmclib.git" }
reqwest = { version = "0.10", features = [ "json", "blocking" ] }
getopts = "0.2"
tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
toml = "0.5"
confomat = { git = "https://github.com/illumos/confomat" }
